09-healthcheck.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-healtcheck
  namespace: traefik
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: PathPrefix(`/ping`)
    services:
    - kind: TraefikService
      name: ping@internal
